[build-system]
requires = ["setuptools","setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.pylint.main]

[tool.pylint.basic]

[tool.pylint."messages control"]
disable = ["missing-function-docstring", "missing-module-docstring", "missing-class-docstring", "too-few-public-methods"]

[tool.setuptools_scm]
write_to = "vppdhc/_version.py"

[tool.setuptools]
packages = ['vppdhc']

[project]
name = "vppdhc"
description="A DHCP server for VPP"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = [
    "scapy", "vpp_papi", "typer",
]
authors = [
    { name = "Ole Troan", email = "otroan@employees.org"},
]
readme = "README.md"

[project.urls]
repository = "https://github.com/nataasvpp/dhcp"

[project.scripts]
vppdhcd = "vppdhc.main:app"
