[build-system]
requires = ["setuptools","setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120

[lint.per-file-ignores]
"tests/*.py" = ["S101"]

#[tool.pylint.main]
#[tool.pylint.basic]
#[tool.pylint."messages control"]
#disable = ["missing-function-docstring", "missing-module-docstring", "missing-class-docstring", "too-few-public-methods"]

[tool.setuptools_scm]
write_to = "vppdhc/_version.py"

[tool.setuptools]
packages = ['vppdhc']

[project]
name = "vppdhc"
description="A DHCP server for VPP"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = [
    "pydantic",
    "scapy @ git+https://github.com/secdev/scapy.git",
    "vpp_papi>=2.3.0",
    "typer",
    "asyncio_dgram",
    "ruff>=0.8.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]
authors = [
    { name = "Ole Troan", email = "otroan@employees.org"},
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
]

[project.urls]
repository = "https://github.com/nataasvpp/dhcp"

[project.scripts]
vppdhcd = "vppdhc.main:app"
vppdhcctl = "vppdhc.vppdhcctl:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--ignore=tests/test_vpppunt.py"
asyncio_mode = "auto"
